lesson_05/build/log/idf_py_stdout_output_2581231
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/build/bootloader && /home/simonque/.espressif/python_env/idf6.1_py3.12_env/bin/python /home/simonque/Documents/code/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/lesson_05.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/lesson_05.c.obj 
/home/simonque/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2310-g44e2fa6d9c-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/build/config -I/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main -I/home/simonque/Documents/code/esp-idf/components/esp_libc/platform_include -I/home/simonque/Documents/code/esp-idf/components/freertos/config/include -I/home/simonque/Documents/code/esp-idf/components/freertos/config/include/freertos -I/home/simonque/Documents/code/esp-idf/components/freertos/config/xtensa/include -I/home/simonque/Documents/code/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/simonque/Documents/code/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/simonque/Documents/code/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/simonque/Documents/code/esp-idf/components/freertos/esp_additions/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/include/soc -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/ldo/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/debug_probe/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/etm/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/power_supply/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/modem/include -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/port/esp32/. -I/home/simonque/Documents/code/esp-idf/components/esp_hw_support/port/esp32/include -I/home/simonque/Documents/code/esp-idf/components/heap/include -I/home/simonque/Documents/code/esp-idf/components/heap/tlsf -I/home/simonque/Documents/code/esp-idf/components/log/include -I/home/simonque/Documents/code/esp-idf/components/soc/include -I/home/simonque/Documents/code/esp-idf/components/soc/esp32 -I/home/simonque/Documents/code/esp-idf/components/soc/esp32/include -I/home/simonque/Documents/code/esp-idf/components/soc/esp32/register -I/home/simonque/Documents/code/esp-idf/components/hal/platform_port/include -I/home/simonque/Documents/code/esp-idf/components/hal/esp32/include -I/home/simonque/Documents/code/esp-idf/components/hal/include -I/home/simonque/Documents/code/esp-idf/components/esp_rom/include -I/home/simonque/Documents/code/esp-idf/components/esp_rom/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/simonque/Documents/code/esp-idf/components/esp_rom/esp32 -I/home/simonque/Documents/code/esp-idf/components/esp_common/include -I/home/simonque/Documents/code/esp-idf/components/esp_system/include -I/home/simonque/Documents/code/esp-idf/components/esp_system/port/soc -I/home/simonque/Documents/code/esp-idf/components/esp_system/port/include/private -I/home/simonque/Documents/code/esp-idf/components/esp_stdio/include -I/home/simonque/Documents/code/esp-idf/components/xtensa/esp32/include -I/home/simonque/Documents/code/esp-idf/components/xtensa/include -I/home/simonque/Documents/code/esp-idf/components/xtensa/deprecated_include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_gpio/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_gpio/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_usb/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_pmu/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_pmu/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_ana_conv/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_dma/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_i2s/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_i2s/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_driver_uart/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_uart/include -I/home/simonque/Documents/code/esp-idf/components/esp_hal_uart/esp32/include -I/home/simonque/Documents/code/esp-idf/components/esp_driver_gpio/include @"/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05=. -fmacro-prefix-map=/home/simonque/Documents/code/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/lesson_05.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/lesson_05.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/lesson_05.c.obj -c /home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main/lesson_05.c
/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main/lesson_05.c: In function 'task_2':
/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main/lesson_05.c:199:55: error: format '%u' expects argument of type 'unsigned int', but argument 4 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  199 |             snprintf(msg_buf, MSG_BUF_SIZE, "Blinked %u times", blink_counter_total);
      |                                                      ~^         ~~~~~~~~~~~~~~~~~~~
      |                                                       |         |
      |                                                       |         uint32_t {aka long unsigned int}
      |                                                       unsigned int
      |                                                      %lu
/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main/lesson_05.c:187:25: error: 'led_state' may be used uninitialized [-Werror=maybe-uninitialized]
  187 |             led_state = !led_state;
      |                         ^~~~~~~~~~
/home/simonque/Documents/code/esp-idf-projects/learn_freeRTOS/lesson_05/main/lesson_05.c:165:13: note: 'led_state' was declared here
  165 |     uint8_t led_state;
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
